--- a/typescript-is-npm/package.json
+++ b/typescript-is-npm/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "exec": "npx ttsc && node index.js"
   },
   "author": "",
@@ -12,7 +13,10 @@
     "typescript-is": "^0.15.0"
   },
   "devDependencies": {
+    "ts-loader": "^6.2.2",
     "ttypescript": "^1.5.10",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
