--- a/rails-structured-logging/docker-compose.yml
+++ b/rails-structured-logging/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
 
   redis:
-    image: redis:3.2
+    image: redis:6.0
     init: true
     ports:
       - ${DOCKER_HOST_REDIS_PORT:-6379}:6379
@@ -31,6 +31,7 @@ services:
       prehook "0=rm -f tmp/pids/server.pid" --
       codep
         "1=rails s -p 3000 -b 0.0.0.0"
+        "2=bundle exec sidekiq"
     depends_on:
       - db
       - redis
