rails-structured-logging: Add deployment scripts

--- a/rails-structured-logging/.envrc.local.sample
+++ b/rails-structured-logging/.envrc.local.sample
@@ -4,3 +4,12 @@
 export DOCKER_HOST_APP_PORT=3000   # You can access to rails server by http://127.0.0.1:${DOCKER_HOST_APP_PORT}
 export DOCKER_HOST_DB_PORT=3306    # You can access to mysql server by tcp://root:@127.0.0.1:${DOCKER_HOST_DB_PORT}
 export DOCKER_HOST_REDIS_PORT=6379 # You can access to redis server by tcp://127.0.0.1:${DOCKER_HOST_REDIS_PORT}
+
+#-------------------------------------------------------------------------------
+# Deploy
+# @see [Environment Variables - AWS Command Line Interface](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html)
+#-------------------------------------------------------------------------------
+export AWS_ACCOUNT_ID=
+export AWS_ACCESS_KEY_ID=
+export AWS_SECRET_ACCESS_KEY=
+export AWS_DEFAULT_REGION=
