--- a/rails-fast-jsonapi/Gemfile
+++ b/rails-fast-jsonapi/Gemfile
@@ -39,5 +39,6 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
-# JSON:API
+# API
 gem 'fast_jsonapi', '~> 1.7.2', git: 'https://github.com/fast-jsonapi/fast_jsonapi'
+gem 'kaminari'
