cs-gcp-speech: Add dotenv

--- a/cs-gcp-speech/.gitignore
+++ b/cs-gcp-speech/.gitignore
@@ -359,6 +359,15 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# Others
+# Packages
+packages/*
+
+# Credentials
 credentials.json
+
+# Env files
+.envrc.local
+.env
+
+# Temp files
 test.flac
