--- a/cs-gcp-speech/cs-gcp-speech/packages.config
+++ b/cs-gcp-speech/cs-gcp-speech/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotenv.net" version="2.1.1" targetFramework="net472" />
   <package id="Google.Api.CommonProtos" version="2.0.0" targetFramework="net472" />
   <package id="Google.Api.Gax" version="3.0.0" targetFramework="net472" />
   <package id="Google.Api.Gax.Grpc" version="3.0.0" targetFramework="net472" />
@@ -15,9 +16,9 @@
   <package id="Grpc.Core.Api" version="2.27.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
 </packages>
