unity-speech-to-text: Add azure speech to text

--- a/unity-speech-to-text/.envrc.local.sample
+++ b/unity-speech-to-text/.envrc.local.sample
@@ -2,3 +2,9 @@
 # GCP
 #-------------------------------------------------------------------------------
 export GOOGLE_APPLICATION_CREDENTIALS=credentials.json
+
+#-------------------------------------------------------------------------------
+# Azure
+#-------------------------------------------------------------------------------
+export AZURE_SBSCRIPTION_KEY=
+export AZURE_REGION=
