unity-speech-to-text: Improve azure speech

--- a/unity-speech-to-text/.envrc
+++ b/unity-speech-to-text/.envrc
@@ -2,4 +2,12 @@ if [ -f .envrc.local ]; then
   source .envrc.local
 fi
 
-env > .env
+make_dotenv() {
+  declare -a envs=( \
+    AZURE_SBSCRIPTION_KEY \
+    AZURE_REGION \
+  )
+  env | grep -E $(IFS="|"; echo "${envs[*]}") > Assets/StreamingAssets/env
+}
+
+make_dotenv
