--- a/go-goproxy/docker-compose.yml
+++ b/go-goproxy/docker-compose.yml
@@ -12,6 +12,19 @@ services:
     ports:
       - ${DOCKER_HOST_PROXY_PORT}:8080
 
+  proxy2:
+    build:
+      context: .
+      dockerfile: docker/proxy/Dockerfile
+    init: true
+    command: go run proxy.go
+    volumes:
+      - .:/app
+    ports:
+      - 8080
+    environment:
+      SECONDARY: 1
+
   nginx:
     image: nginx
     init: true
