--- a/rails-migration-hook/docker/app/Dockerfile
+++ b/rails-migration-hook/docker/app/Dockerfile
@@ -51,7 +51,7 @@ RUN echo "dash dash/sh boolean false" | debconf-set-selections && \
     dpkg-reconfigure dash
 
 # Set shell environments
-ENV APP_HOME /app
+ENV APP_HOME /app/rails-migration-hook
 ENV SHELL /bin/bash
 ENV EDITOR vim
 ENV PATH $APP_HOME/bin:$PATH
