--- a/docker-host-docker-internal/docker-compose.yml
+++ b/docker-host-docker-internal/docker-compose.yml
@@ -10,4 +10,4 @@ services:
         source: ./nginx/conf.d
         target: /etc/nginx/conf.d
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - host.docker.internal:host-gateway
