--- a/docker-compose-v2/compose.yaml
+++ b/docker-compose-v2/compose.yaml
@@ -1,7 +1,11 @@
+name: docker-compose-v2
+
 services:
   app:
     image: golang:1.20.1
-    init: true
+    extends:
+      file: compose.common.yaml
+      service: common
     command: go run .
     volumes:
       - type: bind
@@ -14,10 +18,15 @@ services:
     ports:
       - target: 8080
         published: 8080
+    secrets:
+      - source: app-secrets
+        target: /app/.env
 
   db:
     image: mysql:8
-    init: true
+    extends:
+      file: compose.common.yaml
+      service: common
     volumes:
       - type: volume
         source: db
@@ -29,7 +38,7 @@ services:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "0.0.0.0"]
       interval: 1s
       timeout: 1s
-      retries: 3
+      retries: 30
       start_period: 1s
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
@@ -44,3 +53,7 @@ volumes:
 configs:
   mysql-config:
     file: ./my.cnf
+
+secrets:
+  app-secrets:
+    file: ./app-secrets.env
