--- a/rails-power-bi-embed/package.json
+++ b/rails-power-bi-embed/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "webpack --progress --color --mode=development",
-    "watch": "webpack --progress --color --watch --mode=development"
+    "dev:watch": "webpack --progress --color --watch --mode=development",
+    "dev:watch:srv": "webpack --color --watch --mode=development"
   },
   "dependencies": {
     "powerbi-client": "^2.22.3"
