--- a/rails-power-bi-embed/.devcontainer/devcontainer.json
+++ b/rails-power-bi-embed/.devcontainer/devcontainer.json
@@ -1,19 +1,20 @@
 // See: Dev Container metadata reference https://containers.dev/implementors/json_reference/
 {
-    "name": "rails-power-bi-embed",
-    "dockerComposeFile": [
-        "../compose.yaml"
-    ],
-    "service": "rails_base",
-    "remoteUser": "root",
-    "workspaceFolder": "/sandbox/rails-power-bi-embed",
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "rebornix.ruby",
-                "eamodio.gitlens",
-                "GitHub.copilot"
-            ]
-        }
+  "name": "rails-power-bi-embed",
+  "dockerComposeFile": ["../compose.yaml"],
+  "service": "rails_base",
+  "remoteUser": "root",
+  "workspaceFolder": "/sandbox/rails-power-bi-embed",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "rebornix.ruby",
+        "jnbt.vscode-rufo",
+        "esbenp.prettier-vscode",
+        "dbaeumer.vscode-eslint",
+        "eamodio.gitlens",
+        "GitHub.copilot"
+      ]
     }
+  }
 }
