--- a/rails-power-bi-embed/package.json
+++ b/rails-power-bi-embed/package.json
@@ -1,11 +1,6 @@
 {
   "name": "rails-power-bi-embed",
   "version": "1.0.0",
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
     "dev": "webpack --progress --color --mode=development",
     "dev:watch": "webpack --progress --color --watch --mode=development",
@@ -19,8 +14,9 @@
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "author": "",
-  "license": "MIT"
+    "webpack-cli": "^5.1.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.2"
+  }
 }
