--- a/ts-file-download/package.json
+++ b/ts-file-download/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "encoding-japanese": "^2.0.0",
     "next": "14.0.4",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/encoding-japanese": "^2.0.5",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
