rails-mongo-mapper: Add many records insertion

--- a/rails-mongo-mapper/config/mongo.yml
+++ b/rails-mongo-mapper/config/mongo.yml
@@ -4,9 +4,7 @@ defaults: &defaults
   password: <%= ENV['MONGO_PASSWORD'] %>
   auth_source: admin
   options:
-    w: 1
-    pool_size: 1
-    slave_ok: false
+    max_pool_size: 100
     ssl: false
 
 development:
