--- a/rails-mongo-mapper/compose.yaml
+++ b/rails-mongo-mapper/compose.yaml
@@ -85,6 +85,8 @@ services:
       mongo:
         condition: service_healthy
     environment:
+      ME_CONFIG_BASICAUTH_USERNAME: root
+      ME_CONFIG_BASICAUTH_PASSWORD: example
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
