--- a/k8s-argo-workflow/skaffold.yaml
+++ b/k8s-argo-workflow/skaffold.yaml
@@ -4,9 +4,10 @@ metadata:
   name: k-s-argo-workflow
 build:
   artifacts:
-    - image: k8s-argo-workflow-rackup
-      docker:
-        dockerfile: Dockerfile
+  - image: k8s-argo-workflow-rackup
+    docker:
+      dockerfile: Dockerfile
 manifests:
-  rawYaml:
-    - manifestfile.yaml
+  kustomize:
+    paths:
+    - k8s/base
